[package]
name = "envja-cli"
version = "0.2.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "CLI for Jinja2-like env var interpolation"
edition = "2018"
readme = "../README.md"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"

[dependencies]
envja = { path = "../lib", version = "0.2.0" }
pest = "2.1.0"
structopt = "0.2.15"

[badges]
travis-ci = { repository = "guangie88/envja" }
codecov = { repository = "guangie88/envja" }

[[bin]]
name = "envja"
path = "src/main.rs"
